[package]
name = "portproxy"
version = "0.2.0"
edition = "2021"
authors = ["Michal Borejszo <michael.borejszo@gmail.com>"]
license = "MIT"
description = "Simple port forwarding tool"
repository = "https://github.com/spitfire05/portproxy"
keywords = ["networking", "proxy", "forwarding"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "io-util",
    "macros",
] }
toml = "0.7.3"
derive-getters = "0.2"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
dirs = "4.0.0"
miette = { version = "5.6.0", features = ["fancy"] }
thiserror = "1.0.40"

[dev-dependencies]
rand = "0.8.5"
tempfile = "3.3.0"
reqwest = { version = "0.11", features = ["blocking"] }
escargot = "0.5"
scopeguard = "1.1.0"
assert_cmd = "2.0.4"
predicates = "1"
anyhow = "1.0.70"
