[package]
name = "portproxy"
version = "0.3.1"
edition = "2021"
authors = ["Michal Borejszo <michael.borejszo@gmail.com>"]
license = "MIT"
description = "Simple port forwarding tool"
repository = "https://github.com/spitfire05/portproxy"
keywords = ["networking", "proxy", "forwarding"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
tokio = { version = "1", features = ["full"] }
toml = "0.7.3"
derive-getters = "0.2"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
dirs = "5.0.0"
miette = { version = "5.6.0", features = ["fancy"] }
thiserror = "1.0.40"
clap = { version = "4.2.4", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tracing-appender = "0.2.2"

[dev-dependencies]
rand = "0.8.5"
tempfile = "3.4.0"
reqwest = { version = "0.11", features = ["blocking"] }
escargot = "0.5"
scopeguard = "1.1.0"
assert_cmd = "2.0.5"
predicates = "3"
anyhow = "1.0.70"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.5"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "stable"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "aarch64-apple-darwin",
]
installers = ["shell", "powershell"]
